US5903 - DDK Foundation Adjust spacing on last child element on landing page list. No longer needed now that top margin on footer addresses this.

--- a/src/styles/_component-list.scss
+++ b/src/styles/_component-list.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.media {
+.media:not(:last-child) {
   margin-bottom: 1em;
 
   @media (min-width: $screen-xs) {
